test/cases/pos/0033_nested_if.ul
int x = 3;
int y = 4;

if x > 2: {
  if x < y: x++;
}
