test/cases/neg/0201_redecl_nest.ul
int i = 30;
int x = 40;

if x > i: {
  int z = x + i;
  int i = 4;
}
